Added game logic

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     
     <h1>TIC TAC TOE</h1>
     <div class = "board">
-        <div id="One"></div>
-        <div id="Two"></div>
-        <div id="Three"></div>
-        <div id="Four"></div>
-        <div id="Five"></div>
-        <div id="Six"></div>
-        <div id="Seven"></div>
-        <div id="Eight"></div>
-        <div id="Nine"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
     </div>
+    <div class = "filler"></div>
     <script src="main.js"></script>
 </body>
 </html>
