--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     
     <h1>TIC TAC TOE</h1>
     <div class = "board">
-        <div class = "square">0</div>
-        <div class = "square">1</div>
-        <div class = "square">2</div>
-        <div class = "square">3</div>
-        <div class = "square">4</div>
-        <div class = "square">5</div>
-        <div class = "square">6</div>
-        <div class = "square">7</div>
-        <div class = "square">8</div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
+        <div class = "square"></div>
     </div>
+    <input id="reset" type="reset" value="Reset" onClick="window.location.reload();">
+
     <script src="main.js"></script>
 </body>
 </html>
